# engineering-note

./: README.md
.github/workflows/: linting.yml
Backend/LearnALanguage/: README.md  golang.md  start.md
Backend/LearnALanguage/golang/: append.go  bufferd-channel.go  channels.go  default-selection.go  defer-multi.go  empty-interface.go  exercise-maps.go  exercise-rot-reader.go  exercise-stringer.go  golang.md  indirection-values.go  map-literals-continued.go  map-literals.go  methods-with-pointer-recievers.go  mutanting-maps.go  packages.go  pointers.go  sandbox.go  slices-pointers.go  slices.go  struct-literals.go  type-assertions.go  type-inference.go
Backend/LearnALanguage/golang/bitwiseOperations/: subsetCombination.go
Backend/LearnALanguage/pytnon/: README.md  memo.md
Backend/LearnALanguage/pytnon/api/baby_monstar/: Makefile  README.md  main.py  pyproject.toml
Backend/LearnALanguage/pytnon/api/baby_monstar/baby_monstar/: baby.py
Backend/LearnALanguage/pytnon/api/case_fastapi/: Makefile  README.md  main.py  pyproject.toml
Backend/LearnALanguage/pytnon/api/case_fastapi/baby_monstar/: __init__.py  baby.py
Backend/LearnALanguage/pytnon/api/case_fastapi/tests/: test_baby.py  test_main.py
Backend/LearnALanguage/pytnon/cicd/: Makefile  README.md  pyproject.toml
Introduction/BasicTerminalUsage/: ShellInitializationFiles.md  zsh.md
Introduction/CharactorEncording/: CharactorEncording.md
Introduction/Licenses/: GNU.md
Introduction/VersionContol/: git.md
ReferenceLists/websites/: youtube.md
git/: note.md
(+62 files in other folders)
