[tool.poetry]
name = "cicd"
version = "0.1.0"
description = ""
authors = ["kz <kz@kz.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.4.4"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
autoflake = "^1.5.3"
isort = "^5.10.1"
black = "^22.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
