[tool.poetry]
name = "case_fastapi"
version = "0.1.0"
description = ""
authors = ["kz <kz@kz.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.81.0"
uvicorn = {extras = ["starndard"], version = "^0.18.3"}

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
autoflake = "^1.5.3"
isort = "^5.10.1"
black = "^22.8.0"
pytest-cov = "^3.0.0"
requests = "^2.28.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
